<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Safe Box</string>
    <string name="app_name">Private Safe Box</string>
    <string name="updateversion_ok">The new version is downloaded，please confirm and install.</string>
    <string name="image">Images</string>
    <string name="video">Videos</string>
    <string name="file">Files</string>
    <string name="quit">quit</string>
    <string name="no_space_prompt">No sdcard or space is not enough, please check first.</string>
    <string name="no_space_sdcard">Sdcard\'s space is not enough, please organize sdcard before encrypting.</string>
    <string name="restore_cover_msg">Restore failed. There is duplicate file name in original path. Please rename or delete the file in original path.</string>
    <string name="restore_recovery">file is restored to /sdcard/lesaferecovery</string>
    <string name="lock_prompt">Functional Key is locked, please click Home key to quit.</string>
    <string name="encrypt_cover_msg">is encrypted as</string>
    <string name="nac_server_exit">Safecenter\'s service is not running correctly. Please reboot phone.</string>
    <string name="input_privacy_pwd">Please input safecenter\'s password (6 numbers)</string>
    <string name="input_pwd">input password</string>
    <string name="error_tips_null">password inputed is empty, please input again.</string>
    <string name="pwd_error_tips">password inputed is error, please input again.</string>
    <string name="isFirstImage">It\'s the first image already.</string>
    <string name="isLastImage">It\'s the last image already.</string>
    <string name="cantOpen">Invalid image.</string>
    <string name="addImage">Add Images</string>
    <string name="editImage">Edit</string>
    <string name="ImageFolderNull">No Image</string>
    <string name="VideoFolderNull">No Video</string>
    <string name="ImageFolderPick">click and enter image folder</string>
    <string name="VideoFolderPick">click and enter video folder</string>
    <string name="select_img">check boxes to select images</string>
    <string name="select_video">check boxes to select videos</string>
    <string name="select_file">check boxes to select files</string>
    <string name="protected_img">encrypted images(</string>
    <string name="protected_video">encrypted videos(</string>
    <string name="protected_file">encrypted files(</string>
    <string name="protected_end">)</string>
    <string name="protected_begin">(</string>
    <string name="unlock_apps">Unlocked</string>
    <string name="locked_apps">Locked</string>
    <string name="unlock_all">Safecenter need update, safebox has unlocked all applicaitons.</string>
    <string name="visit_title">Access Restrict</string>
    <string name="open_visit_control">start access restrict</string>
    <string name="close_visit_control">stop access restrict</string>
    <string name="hide_private_info">hide private information</string>
    <string name="lock_app_info">lock private applications(</string>
    <string name="private_info_prompt">hide phone book, phone call and sms record.</string>
    <string name="notice1">no troubles to private information</string>
    <string name="notice2">click to add private data</string>
    <string name="choiceType">choose encryption type</string>
    <string name="app_lock">Application Lock</string>
    <string name="addApp">Add applications</string>
    <string name="addPrivateImage">Add Private Images</string>
    <string name="addVideo">add videos</string>
    <string name="addPrivateVideo">Add Private Videos</string>
    <string name="add_pri_video_empty">Add Private Videos(No videos)</string>
    <string name="video_empty">no video in sdcard</string>
    <string name="addFiles">Add Files or Folders</string>
    <string name="addFile">add files</string>
    <string name="addAccount">Add account information</string>
    <string name="pri_media">Private Media Files</string>
    <string name="selectAll">add all</string>
    <string name="restore">restore</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="del_pri">delete</string>
    <string name="back">back</string>
    <string name="cancel">cancel</string>
    <string name="ori_path">original path</string>
    <string name="choose_path">please choose storage:</string>
    <string name="password">password</string>
    <string name="holdplace">holdplace</string>
    <string name="slash">/</string>
    <string name="percent">5/16</string>
    <string name="addPriApp">Add Private Applications</string>
    <string name="locked_app">locked applications</string>
    <string name="select_image_location">please choose images\' location</string>
    <string name="scan_image">Auto scan images</string>
    <string name="manul_image">Select images manually</string>
    <string name="select_video_location">please choose videos\' location</string>
    <string name="scan_video">Auto scan videos</string>
    <string name="manul_video">Select videos manually</string>
    <string name="add_pri_image">Add Private Images</string>
    <string name="add_pri_image_empty">Add Private Images(No image)</string>
    <string name="img_empty">no image in sdcard</string>
    <string name="select_all">add all</string>
    <string name="dis_select_all">cancel</string>
    <string name="encrypt">encrypt</string>
    <string name="normal_file">All Files</string>
    <string name="back_last_level">back</string>
    <string name="size">Size:</string>
    <string name="isfolder">Folder</string>
    <string name="pri_image">Private Images</string>
    <string name="pri_video">Private Videos</string>
    <string name="pri_file">Private Files</string>
    <string name="unknown_file">Unknown file</string>
    <string name="dia_showfiles_title">Please choose:</string>
    <string name="encrypt_title">Success prompt:</string>
    <string name="encrypt_message1">Encrypt </string>
    <string name="encrypt_message_image"> images successfully. Private images </string>
    <string name="encrypt_message_video"> videos successfully. Private videos </string>
    <string name="encrypt_message_file"> files successfully. Private files </string>
    <string name="encrypt_message2">can only be checked in private space.</string>
    <string name="complete">OK</string>
    <string name="continue_add">continue</string>
    <string name="pls_wait">Please wait to finish.</string>
    <string name="exit_title">quit prompt</string>
    <string name="exit_msg">Do you confirm to quit safebox?</string>
    <string name="app_exit_msg">Do you confirm to quit application box?</string>
    <string name="confirm">confirm</string>
    <string name="please_create_password">please input password</string>
    <string name="input_again">password error</string>
    <string name="delete_title">Deleting warnning:</string>
    <string name="delete_msg">Are you sure to delete?</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>
    <string name="empty"> </string>
    <string name="input_pass_again">input again</string>
    <string name="select_prompt">click to choose</string>
    <string name="restore_prompt">restore </string>
    <string name="restore_file"> files successfully</string>
    <string name="restore_image"> images successfully</string>
    <string name="restore_video"> videos successfully</string>
    <string name="sys_app">System Application</string>
    <string name="data_app">Other Application</string>
    <string name="add_app_fail">Lock application failed</string>
    <string name="open">open</string>
    <string name="unlock"> is unlocked.</string>
    <string name="locked"> is added to protect list.</string>
    <string name="rm_app_ok">unlock application successfully</string>
    <string name="rm_app_failed">unlock application failed</string>
    <string name="wait_img_folder">Scanning images...</string>
    <string name="wait_video_folder">Scanning videos...</string>
    <string name="error_3">password incorrect</string>
    <string name="setting">setting</string>
    <string name="pwd_setting">password setting</string>
    <string name="app_info">application information</string>
    <string name="continue_">continue</string>
    <string name="retry">try again</string>
    <string name="pls_set_pwd">please set password for safebox</string>
    <string name="app_switch">application switch</string>
    <string name="change_pwd">change password</string>
    <string name="set_security_qus">set security question</string>
    <string name="set_fake_pwd">set fake password</string>
    <string name="switch_no_icon">switch to no-icon version</string>
    <string name="suggestion">feedback</string>
    <string name="version">version</string>
    <string name="prompt_clear">Passwords do not match, please input again.</string>
    <string name="reset_pwd_ok">Reset password successfully！</string>
    <string name="reset_pwd_prompt">Safebox password setting</string>
    <string name="reset_lack">Note:The password you entered is less than 6 numbers, please input again!</string>
    <string name="safeing">Safecenter guarding</string>
    <string name="locking"> is being protected.</string>
    <string name="locking_default">The application is locked by Safecenter</string>
    <string name="input_le_pwd">Input password</string>
    <string name="login">unlock</string>
    <string name="first_use_password_setting_note_input_1">input 6 number</string>
    <string name="first_use_password_setting_note_input_2">input password again</string>
    <string name="first_use_password_setting_describe_1">乐安全密码是用于进入“手机防盗、访客/儿童模式”的唯一密码，请牢记</string>
    <string name="first_use_password_setting_describe_2">可在 超级工具/密码设置/设置乐安全密码 里进行修改</string>
    <string name="ok">ok</string>
    <string name="setting_app_lock_set">开启保险箱密码</string>
    <string name="setting_app_uninstall_protect">开启卸载自保护</string>
    <string name="setting_app_switch_title">程序相关开关</string>
    <string name="exec_state">executing...</string>
    <string name="exec_open">Mode is starting...</string>
    <string name="exec_close">Mode is stopping...</string>
    <string name="lockedapp_begin">is locked</string>
    <string name="lockedapp_end">application</string>
    <string name="lock_app_none">No locked application</string>
    <string name="warnning">warnning</string>
    <string name="running_warn">Task is running. Are you sure to terminate it?</string>
    <string name="SUS_SETTINGS_NEVERPROMPT">不再提醒</string>
    <string name="SUS_VERSIONUPDATE">检测到新版本！</string>
    <string name="SUS_UPDATEVERPROMPT_VERNAME">版本名：</string>
    <string name="SUS_UPDATEVERPROMPT_VERSIZE">版本大小：</string>
    <string name="SUS_UPDATESIZEPROMPT_WIFI">若流量有限，建议用WLAN下载！</string>
    <string name="SUS_UPDATE">更新</string>
    <string name="SUS_CANCEL">取消</string>
    <string name="SUS_DOWNLOAD_TITLE">乐安全保险箱正在下载..</string>
    <string name="SUS_LATESTVERSION">已经是最新版本！</string>
    <string name="SUS_NOTFOUND">已经是最新版本！</string>
    <string name="DOWNLOADCOMPLETE">下载完成，请安装。</string>
    <string name="SUS_WARNING_PENDING">下载正在进行..</string>
    <string name="SUS_FAIL_NETWORKUNAVAILABLE">当前网络不可用</string>
    <string name="SUS_MSG_UPDATE_EXCEPTION">更新失败,请重试!</string>
    <string name="percent_set">0%</string>
</resources>
