<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="#eeeeee" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/title"/>
    <RelativeLayout android:orientation="vertical" android:background="#eeeeee" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="22dp" android:textColor="@color/black1" android:gravity="center" android:id="@+id/lockedscreen_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="60dp" android:layout_marginRight="10dp" android:text="@string/locking" android:maxLines="2" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"/>
        <Button android:textSize="20dp" android:textColor="#4a4a4a" android:id="@+id/lockedscreen_login" android:background="@drawable/gui_mybtn_bottom_selector" android:layout_width="150dp" android:layout_height="40dp" android:layout_marginTop="50dp" android:text="@string/login" android:layout_below="@+id/lockedscreen_pwd" android:layout_centerHorizontal="true"/>
        <Button android:textSize="20dp" android:textColor="#4a4a4a" android:id="@+id/lockedscreen_cancel" android:background="@drawable/gui_mybtn_bottom_selector" android:layout_width="150dp" android:layout_height="40dp" android:layout_marginTop="3dp" android:text="@string/cancel" android:layout_below="@+id/lockedscreen_login" android:layout_centerHorizontal="true"/>
        <ImageView android:id="@+id/imageView1" android:layout_width="120dp" android:layout_height="120dp" android:layout_marginTop="43dp" android:src="@drawable/gui_big_lock" android:layout_below="@+id/lockedscreen_login" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
        <EditText android:textColor="#454545" android:gravity="center" android:id="@+id/lockedscreen_pwd" android:layout_width="250dp" android:layout_height="wrap_content" android:layout_marginTop="13dp" android:hint="@string/input_le_pwd" android:password="true" android:maxLength="6" android:phoneNumber="true" android:layout_below="@+id/lockedscreen_tv" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>
